// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Element applies left modifier 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-kAzzGY dfqiAt sc-gZMcBi hbkhKP"
/>
`;

exports[`Icon Element applies right modifier 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-kAzzGY fOnDyx sc-gZMcBi hbkhKP"
/>
`;

exports[`Icon Element renders correctly 1`] = `
<span
  aria-hidden={true}
  className="fa fa-home sc-kAzzGY iBXbAb sc-gZMcBi hbkhKP"
/>
`;
